--- a/main.html
+++ b/main.html
@@ -11,6 +11,12 @@
     <section class="middle"> </section>
     <h1 style="color:#B8BCCC;text-align: center;">More Information About You</h1>
     <div class="Time-zone">Hill</div>
+    <div class="search">
+        <h1 style="color:#B8BCCC;text-align: center;">Post Offices Near You</h1>
+        <input type="text" id="text" placeholder="Search By Name">
+    </div>
+    <div class="postoffice">
+    </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="./main.js"></script>
   </body>
