--- a/index.html
+++ b/index.html
@@ -4,22 +4,23 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
-   <section>
+    <section>
       <h1>Post Office Application.</h1>
-      <p>This Application Allows you to extract information about<br>
-         the nearest Post Offices, based on your location.</p>
-      <img src="imag1.svg" alt="imag1">
+      <p>
+        This Application Allows you to extract information about<br />
+        the nearest Post Offices, based on your location.
+      </p>
+      <img src="imag1.svg" alt="imag1" />
     </section>
     <section>
-        <div>
-        <span>Your Current IP Address is  </span>
-        <span id="Address"></span><br>
+      <div>
+        <span>Your Current IP Address is </span>
+        <span id="Address"></span><br />
         <button id="getIpValue">Get Started</button>
-    </div>      
-    
+      </div>
     </section>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="./script.js"></script>
